force-app/main/default/objects/Product2/fields/For_Promotion__c.field-meta.xml
<CustomField>
    <fullName>For_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Promotion</label>
    <type>Checkbox</type>
</CustomField>