force-app/main/default/objects/Product2/fields/Is_Customer_Benefit_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Benefit_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Benefit Product</label>
    <type>Checkbox</type>
</CustomField>