force-app/main/default/objects/Product2/fields/Is_Discount_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Discount Product</label>
    <type>Checkbox</type>
</CustomField>