force-app/main/default/objects/Product2/fields/Is_Legal_Document__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Legal Document</label>
    <type>Checkbox</type>
</CustomField>