force-app/main/default/objects/Product2/fields/Is_Public_Registration_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Registration_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public Registration Product</label>
    <type>Checkbox</type>
</CustomField>