force-app/main/default/objects/Product2/fields/Is_subscription__c.field-meta.xml
<CustomField>
    <fullName>Is_subscription__c</fullName>
    <formula>NOT( ISBLANK( Plan__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is subscription</label>
    <type>Checkbox</type>
</CustomField>