force-app/main/default/objects/Product2/fields/Maximum_Quantity_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity_Per_Order__c</fullName>
    <label>Maximum Quantity Per Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>