force-app/main/default/objects/Product2/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <label>Product Identifier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>