force-app/main/default/objects/Product2/fields/Requires_Document_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Document_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Document Review</label>
    <type>Checkbox</type>
</CustomField>