force-app/main/default/objects/Product2/fields/Requires_Finalization_Email__c.field-meta.xml
<CustomField>
    <fullName>Requires_Finalization_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Finalization Email</label>
    <type>Checkbox</type>
</CustomField>