force-app/main/default/objects/Product2/fields/Requires_Tinglysning__c.field-meta.xml
<CustomField>
    <fullName>Requires_Tinglysning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Tinglysning</label>
    <type>Checkbox</type>
</CustomField>