force-app/main/default/objects/Product2/fields/Skip_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Skip_Categorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Categorization</label>
    <type>Checkbox</type>
</CustomField>