force-app/main/default/objects/Product2/fields/Unique_Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Product_Identifier__c</fullName>
    <formula>Product_Identifier__c&amp;&quot;-&quot;&amp; TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Product Identifier</label>
    <type>Text</type>
</CustomField>