force-app/main/default/objects/Product2/validationRules/Require_Product_Identifier_When_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Product_Identifier_When_Active</fullName>
    <active>true</active>
    <description>This validation rule ensures that when a product is marked as active, the Product Identifier field must be populated. This helps maintain data integrity for active products.</description>
    <errorConditionFormula>AND(
    IsActive, 
    ISBLANK(Product_Identifier__c)
)</errorConditionFormula>
    <errorDisplayField>Product_Identifier__c</errorDisplayField>
    <errorMessage>Product Identifier is required for active products. Please fill in the Product Identifier field.</errorMessage>
</ValidationRule>