force-app/main/default/objects/Product2/listViews/Active_Swedish_Discount_Products.listView-meta.xml
<ListView>
    <fullName>Active_Swedish_Discount_Products</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Identifier__c</columns>
    <columns>Unique_Product_Identifier__c</columns>
    <columns>Requires_Finalization_Email__c</columns>
    <columns>Requires_Tinglysning__c</columns>
    <columns>Skip_Categorization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.PRODUCT_CURRENCY</field>
        <operation>equals</operation>
        <value>SEK</value>
    </filters>
    <filters>
        <field>Is_Discount_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Swedish Discount Products</label>
</ListView>