force-app/main/default/objects/Product2/listViews/All_Products_Incl_non_active.listView-meta.xml
<ListView>
    <fullName>All_Products_Incl_non_active</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.EXTERNAL_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Products (Incl. non-active)</label>
</ListView>